Updated solution and starter with new code

--- a/lesson-3-pruning-and-sparsity/exercise-1/solution/Exercise_1_solution_revised.ipynb
+++ b/lesson-3-pruning-and-sparsity/exercise-1/solution/Exercise_1_solution_revised.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3d0e7ea7-e0bc-4f14-a4ad-9c2246094287",
+   "id": "851cb58b-1175-45d8-9113-9869ca6cfed4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3919f56f-169a-42c5-b187-75144f2a1347",
+   "id": "1d3b226d-9e0d-4ae9-984d-4e00e8006d2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "53152b60-68e9-4e9c-a997-35fcb0c2334c",
+   "id": "4d36546f-6bbe-4d65-b952-2520b94ab986",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b41db383-dbff-49b1-81cc-0b8f1969173b",
+   "id": "39e97ed4-3031-452c-b3d9-7d79afa84e14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "eecc93ae-e73e-4136-9628-78f2fc609a4d",
+   "id": "1d94de27-8bb4-4110-84f5-b9cac02dc045",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4fbd93d6-0cd5-42d5-a2d3-80671fc0c1ae",
+   "id": "d85619ae-1a0f-44f2-99f1-cb8cb3d7bf78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6fcba78d-36a9-4c2f-a7ab-8d1b78033154",
+   "id": "79f5c2f5-9541-42e1-8389-dcd1b216add7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "df00ca42-c803-4d06-bc21-f50f4ef0ec22",
+   "id": "3b5cde41-77ee-4339-a06c-6fe825e6ad89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,71 +298,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "6b5d4e48-12d5-45d6-ad2f-1a32440b7ba3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def measure_peak_mem_and_perplexity(model, tokenizer, text: str, device):\n",
-    "    \"\"\"\n",
-    "    TODO:\n",
-    "      - Tokenize `text` to tensors on `device` with labels=input_ids\n",
-    "      - Reset peak GPU mem stats (if CUDA)\n",
-    "      - Run model(**inputs) under torch.no_grad()\n",
-    "      - Sync CUDA, read max_memory_allocated → MiB\n",
-    "      - Compute loss → perplexity = exp(loss)\n",
-    "      - Return (peak_mem_mib, perplexity)\n",
-    "    \"\"\"\n",
-    "    inputs = tokenizer(text, return_tensors=\"pt\").to(device)\n",
-    "\n",
-    "    torch.cuda.reset_peak_memory_stats(device)\n",
-    "    with torch.no_grad():\n",
-    "        out = model(**inputs, labels=inputs[\"input_ids\"])\n",
-    "    torch.cuda.synchronize()\n",
-    "    peak_mem_mib = torch.cuda.max_memory_allocated(device) / 1024**2\n",
-    "    perplexity = math.exp(out.loss.item())\n",
-    "    return peak_mem_mib, perplexity"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "d9e38101-2b8b-4185-aa63-d7cae0db8594",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def measure_latency_and_throughput(model, tokenizer, prompt: str, device):\n",
-    "    \"\"\"\n",
-    "    TODO:\n",
-    "      - Tokenize `prompt` to tensors on `device`\n",
-    "      - Warm up with a short generate\n",
-    "      - Time a full generate(max_new_tokens=MAX_NEW_TOKENS)\n",
-    "      - Return (latency_s, tokens_per_second)\n",
-    "    \"\"\"\n",
-    "    inputs = tokenizer(prompt, return_tensors=\"pt\").to(device)\n",
-    "    input_len = inputs[\"input_ids\"].size(1)\n",
-    "\n",
-    "    # warm-up\n",
-    "    _ = model.generate(**inputs, max_new_tokens=5)\n",
-    "    if device.type == \"cuda\":\n",
-    "        torch.cuda.synchronize()\n",
-    "\n",
-    "    # timed generation\n",
-    "    start = time.time()\n",
-    "    outputs = model.generate(**inputs, max_new_tokens=MAX_NEW_TOKENS)\n",
-    "    if device.type == \"cuda\":\n",
-    "        torch.cuda.synchronize()\n",
-    "    end = time.time()\n",
-    "\n",
-    "    latency = end - start\n",
-    "    gen_tokens = outputs.size(1) - input_len\n",
-    "    return latency, gen_tokens / latency"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "9e22e2ca-c38d-4342-ba01-48a84c6b0196",
+   "execution_count": 8,
+   "id": "77c3803f-9b33-42b3-a1cf-0891f0ea130b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,29 +326,32 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "27440f2e-e9ef-474f-9275-dd1a588ac57e",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "2824316e-ff26-4dfa-b1f4-f7d3e4c3e2fd",
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Starting from v4.46, the `logits` model output will have the same type as the model (except at train time, where it will always be FP32)\n"
+      "2025-08-31 00:54:22.776464: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-08-31 00:54:22.791036: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-08-31 00:54:22.809382: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2025-08-31 00:54:22.815104: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-08-31 00:54:22.828245: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Baseline] latency   = 1.071s\n",
-      "[Baseline] throughput= 46.7 tok/s\n",
-      "[Baseline] peak GPU  = 2125.4 MiB\n",
+      "[Baseline] latency   = 1.164s\n",
+      "[Baseline] throughput= 43.0 tok/s\n",
+      "[Baseline] peak GPU  = 2129.6 MiB\n",
       "[Baseline] perplexity= 4.557\n",
-      "[Rebuilt] latency   = 1.075s\n",
-      "[Rebuilt] throughput= 46.5 tok/s\n",
-      "[Rebuilt] peak GPU  = 1465.4 MiB\n",
+      "[Rebuilt] latency   = 1.141s\n",
+      "[Rebuilt] throughput= 43.8 tok/s\n",
+      "[Rebuilt] peak GPU  = 1469.6 MiB\n",
       "[Rebuilt] perplexity= 428383.216\n",
       "[Rebuilt] on-disk size = 1372.2 MiB\n"
      ]
@@ -424,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76a2f565-2c3f-4250-a85c-44b8d22f09e9",
+   "id": "5858e1e0-40f2-4d81-9fae-5fe74b1e5a09",
    "metadata": {},
    "outputs": [],
    "source": []
