Corrected model name andupdated starter

--- a/lesson-1_introduction_to_model_optimization/exercise_1/starter/starter.ipynb
+++ b/lesson-1_introduction_to_model_optimization/exercise_1/starter/starter.ipynb
@@ -5,7 +5,7 @@
    "id": "bf2e3b77",
    "metadata": {},
    "source": [
-    "# Exercise 1 — Starter (Template‑Aligned)\n",
+    "# Exercise 1 — Starter\n",
     "\n",
     "Build on the **demo** by exploring: (A) generation length, (B) numerical precision, and (C) KV cache. This starter **runs out‑of‑the‑box** but exposes clear TODOs. Set `AUTO_SOLUTIONS=False` to turn it into a coding task."
    ]
@@ -16,6 +16,8 @@
    "metadata": {},
    "source": [
     "## 0) Environment guard\n",
+    "\n",
+    "#### Built on top of the Demo\n",
     "Avoid NumPy 2.x + TensorFlow wheel conflicts by disabling optional TF/Flax imports in `transformers`."
    ]
   },
@@ -37,6 +39,8 @@
    "metadata": {},
    "source": [
     "## 1) Imports & globals\n",
+    "\n",
+    "#### Built on top of the Demo\n",
     "If the preferred model isn't available, we fall back to a tiny model to keep the notebook runnable everywhere."
    ]
   },
@@ -74,7 +78,9 @@
    "id": "447515ab",
    "metadata": {},
    "source": [
-    "## 2) Helpers "
+    "## 2) Helpers \n",
+    "\n",
+    "#### Built on top of the Demo"
    ]
   },
   {
@@ -86,7 +92,6 @@
    "source": [
     "def _resolve_dtype(dtype_str: str, device: torch.device):\n",
     "    \"\"\"\n",
-    "    TODO:\n",
     "      1) Normalize/validate `dtype_str` (accept 'float16' or 'float32'; case-insensitive is fine).\n",
     "         - If unsupported, raise ValueError with a clear message.\n",
     "\n",
@@ -102,7 +107,9 @@
     "      4) Return a tuple: (resolved_torch_dtype, label_string), where label_string is\n",
     "         a human-readable descriptor like 'float16' or 'float32 (forced on CPU)'.\n",
     "    \"\"\"\n",
-    "    raise NotImplementedError(\"Implement _resolve_dtype() per the TODO above.\")"
+    "    if device.type == 'cpu' and dtype_str == 'float16':\n",
+    "        return torch.float32, 'float32 (forced on CPU)'\n",
+    "    return (torch.float16 if dtype_str == 'float16' else torch.float32), dtype_str"
    ]
   },
   {
@@ -114,7 +121,6 @@
    "source": [
     "def load_model_and_tokenizer(model_name: str, dtype_str: str = \"float16\"):\n",
     "    \"\"\"\n",
-    "    TODO:\n",
     "      1) Resolve the requested precision:\n",
     "         - Call `_resolve_dtype(dtype_str, device)` to get `(torch_dtype, dtype_label)`.\n",
     "         - Ensure CPU requests for 'float16' are coerced to float32.\n",
@@ -144,7 +150,19 @@
     "      - You may pass `low_cpu_mem_usage=True` or `device_map=\"auto\"` (if appropriate for your runtime).\n",
     "      - Keep `trust_remote_code=False` unless you explicitly need custom modeling code.\n",
     "    \"\"\"\n",
-    "    raise NotImplementedError(\"Implement load_model_and_tokenizer() per the TODO above.\")"
+    "    dtype, label = _resolve_dtype(dtype_str, device)\n",
+    "    for name in [model_name]:\n",
+    "        try:\n",
+    "            tok = AutoTokenizer.from_pretrained(name, use_fast=True)\n",
+    "            mdl = AutoModelForCausalLM.from_pretrained(name, torch_dtype=dtype)\n",
+    "            mdl.to(device)\n",
+    "            mdl.eval()\n",
+    "            if tok.pad_token_id is None and tok.eos_token_id is not None:\n",
+    "                tok.pad_token = tok.eos_token\n",
+    "            return tok, mdl, name, label\n",
+    "        except Exception:\n",
+    "            continue\n",
+    "    raise RuntimeError('Could not load any model from preferred/fallback list.')"
    ]
   },
   {
@@ -164,7 +182,6 @@
     "    num_runs: int = 3,\n",
     ") -> Dict[str, Any]:\n",
     "    \"\"\"\n",
-    "    TODO:\n",
     "      1) Tokenize the prompt:\n",
     "         - Create `input_ids = tokenizer(prompt, return_tensors='pt').input_ids.to(model.device)`.\n",
     "\n",
@@ -198,7 +215,23 @@
     "        - Do all forwards under `torch.no_grad()` to avoid autograd overhead.\n",
     "        - We measure **end-to-end** generation time for the given `max_new_tokens`.\n",
     "    \"\"\"\n",
-    "    raise NotImplementedError(\"Implement time_generate() per the TODO steps above.\")\n"
+    "    input_ids = tokenizer(prompt, return_tensors='pt').input_ids.to(model.device)\n",
+    "    with torch.no_grad():\n",
+    "        for _ in range(num_warmup):\n",
+    "            _ = model.generate(input_ids, max_new_tokens=8, use_cache=use_cache)\n",
+    "    latencies, tokens_out = [], []\n",
+    "    with torch.no_grad():\n",
+    "        for _ in range(num_runs):\n",
+    "            t0 = time.perf_counter()\n",
+    "            out = model.generate(input_ids, max_new_tokens=max_new_tokens, use_cache=use_cache)\n",
+    "            t1 = time.perf_counter()\n",
+    "            latencies.append(t1 - t0)\n",
+    "            tokens_out.append(out.shape[-1] - input_ids.shape[-1])\n",
+    "    L = sum(latencies) / max(len(latencies), 1)\n",
+    "    TG = sum(tokens_out) / max(len(tokens_out), 1)\n",
+    "    TPS = (TG / L) if L > 0 else float('nan')\n",
+    "    LPT = (L / max(TG, 1e-9)) * 1000.0\n",
+    "    return {'total_latency_s': L, 'tokens_generated': TG, 'tokens_per_sec': TPS, 'avg_latency_per_token_ms': LPT}\n"
    ]
   },
   {
