--- a/lesson-1_introduction_to_model_optimization/exercise_1/starter/starter.ipynb
+++ b/lesson-1_introduction_to_model_optimization/exercise_1/starter/starter.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Exercise 1 — Starter\n",
     "\n",
-    "Build on the **demo** by exploring: (A) generation length, (B) numerical precision, and (C) KV cache. This starter **runs out‑of‑the‑box** but exposes clear TODOs. Set `AUTO_SOLUTIONS=False` to turn it into a coding task."
+    "Build on the **demo** by exploring: (A) generation length, (B) numerical precision, and (C) KV cache. This starter **runs out‑of‑the‑box** but exposes clear TODOs. "
    ]
   },
   {
