--- a/lesson-1_introduction_to_model_optimization/exercise_1/solution/solution.ipynb
+++ b/lesson-1_introduction_to_model_optimization/exercise_1/solution/solution.ipynb
@@ -5,9 +5,9 @@
    "id": "bf2e3b77",
    "metadata": {},
    "source": [
-    "# Exercise 1 — Starter (Template‑Aligned)\n",
+    "# Exercise 1 — Solution\n",
     "\n",
-    "Build on the **demo** by exploring: (A) generation length, (B) numerical precision, and (C) KV cache. This starter **runs out‑of‑the‑box** but exposes clear TODOs. Set `AUTO_SOLUTIONS=False` to turn it into a coding task."
+    "Build on the **demo** by exploring: (A) generation length, (B) numerical precision, and (C) KV cache. This starter **runs out‑of‑the‑box** but exposes clear TODOs."
    ]
   },
   {
