--- a/lesson-1_introduction_to_model_optimization/exercise_1/solution/solution.ipynb
+++ b/lesson-1_introduction_to_model_optimization/exercise_1/solution/solution.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Exercise 1 — Solution\n",
     "\n",
-    "Build on the **demo** by exploring: (A) generation length, (B) numerical precision, and (C) KV cache. This starter **runs out‑of‑the‑box** but exposes clear TODOs."
+    "Build on the **demo** by exploring: (A) generation length, (B) numerical precision, and (C) KV cache. "
    ]
   },
   {
