--- a/lesson-1_introduction_to_model_optimization/exercise_2/solution/solution.ipynb
+++ b/lesson-1_introduction_to_model_optimization/exercise_2/solution/solution.ipynb
@@ -2,17 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "8513c4b7",
+   "metadata": {},
+   "source": [
+    "> **Environment Setup:**\n",
+    "\n",
+    "Set environment variables to disable TensorFlow and Flax in Hugging Face Transformers to avoid compatibility issues."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "49d2bfa5",
    "metadata": {},
    "source": [
-    "# Exercise 2 — Extended Solution\n",
+    "> **Environment Setup: Disabling TensorFlow and Flax in Transformers**\n",
     "\n",
-    "We extend the demo by **measuring how perplexity and memory scale** with:\n",
-    "1. **Context length (prompt tokens)**\n",
-    "2. **Numerical precision (fp16 vs fp32)**\n",
-    "3. **Batch size**\n",
-    "\n",
-    "Run the *Environment guard* first to avoid NumPy 2.x + TF issues."
+    "This cell sets environment variables to prevent Hugging Face Transformers from attempting to use TensorFlow or Flax backends. This is important to avoid compatibility issues, especially with NumPy 2.x and to ensure that only PyTorch is used for model loading and inference."
    ]
   },
   {
@@ -37,6 +42,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7e7a11f2",
+   "metadata": {},
+   "source": [
+    "> **Importing Core Libraries for Model Evaluation**\n",
+    "\n",
+    "This cell imports essential Python libraries and modules required for the experiments. It includes math for calculations, torch for deep learning operations, time for performance measurement, typing for type hints, and Hugging Face Transformers for model and tokenizer loading."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "55aa6817-5cb7-40fb-ae31-522ac073db1b",
@@ -51,6 +66,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c575901d",
+   "metadata": {},
+   "source": [
+    "> **Model Selection: Choosing the LLM for Experiments**\n",
+    "\n",
+    "This cell defines the model name to be used throughout the notebook. The selected model (TinyLlama-1.1B-Chat-v1.0) is a compact, chat-optimized language model suitable for running on limited hardware and for demonstrating scaling experiments."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "1190abf7-932f-4bb4-9620-1a0081689deb",
@@ -59,6 +84,16 @@
    "source": [
     "# ─── SETTINGS ────────────────────────────────────────────────────────────────\n",
     "MODEL_NAME = \"TinyLlama/TinyLlama-1.1B-Chat-v1.0\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f3991ca",
+   "metadata": {},
+   "source": [
+    "> **Model and Tokenizer Loader: Device and Precision Handling**\n",
+    "\n",
+    "This function loads the specified model and tokenizer from Hugging Face, automatically moves the model to GPU (if available) or CPU, and selects the appropriate numerical precision (float16 for CUDA, float32 otherwise). The model is set to evaluation mode to disable training-specific behaviors."
    ]
   },
   {
@@ -90,6 +125,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e141fae5",
+   "metadata": {},
+   "source": [
+    "> **Text Selection: Providing a Sample Passage**\n",
+    "\n",
+    "This function returns a sample passage of approximately 100 tokens, typically from Wikipedia or a similar source. The passage is used as the input prompt for all subsequent tokenization and evaluation steps, ensuring consistency across experiments."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "89e5c389-d355-45f4-a42f-ba3549c07529",
@@ -113,6 +158,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9aa1fdec",
+   "metadata": {},
+   "source": [
+    "> **Tokenization with Labels: Preparing Model Inputs**\n",
+    "\n",
+    "This function tokenizes the selected text using the model's tokenizer, converts the text into input tensors, and sets up the labels for language modeling. The output is a dictionary of tensors ready for model input, along with the input length in tokens."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "5b052ce0-7926-49ca-bd28-0fd626883169",
@@ -130,6 +185,16 @@
     "    inputs[\"labels\"] = inputs[\"input_ids\"].clone()\n",
     "    input_len = inputs[\"input_ids\"].size(1)\n",
     "    return inputs, input_len"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bf2ec43",
+   "metadata": {},
+   "source": [
+    "> **Peak Memory and Loss Calculation: Measuring Resource Usage**\n",
+    "\n",
+    "This function runs a forward pass of the model on the provided inputs, measuring the peak GPU memory usage (if CUDA is available) and the loss value. It ensures accurate memory measurement by resetting and synchronizing CUDA memory stats."
    ]
   },
   {
@@ -169,6 +234,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d6a25008",
+   "metadata": {},
+   "source": [
+    "> **Perplexity Computation: Interpreting Model Loss**\n",
+    "\n",
+    "This function converts the model's loss value into perplexity, a standard metric for evaluating language models. Lower perplexity indicates better model performance on the given text."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "0d1968fb-257c-43fe-8ec8-dad0f99389b9",
@@ -181,6 +256,16 @@
     "      - Compute and return math.exp(loss)\n",
     "    \"\"\"\n",
     "    return math.exp(loss)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59c502d0",
+   "metadata": {},
+   "source": [
+    "> **Forward Pass Timing: Measuring Inference Latency**\n",
+    "\n",
+    "This function measures the average time taken for the model to perform a forward pass (inference) on the input data. It includes warmup runs to stabilize performance and reports the mean latency over several timed runs."
    ]
   },
   {
@@ -224,6 +309,16 @@
     "            t1 = time.perf_counter()\n",
     "            latencies.append(t1 - t0)\n",
     "    return sum(latencies) / max(len(latencies), 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "020268a8",
+   "metadata": {},
+   "source": [
+    "> **Context Length Sweep: Scaling Analysis with Input Size**\n",
+    "\n",
+    "This function systematically increases the input (context) length and measures how peak memory usage and inference latency scale. It builds longer input texts, runs the model, and visualizes the results, helping to understand the model's resource requirements as context grows."
    ]
   },
   {
@@ -346,6 +441,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e485f7b5",
+   "metadata": {},
+   "source": [
+    "> **Precision Comparison: Memory and Perplexity Across dtypes**\n",
+    "\n",
+    "This function compares the model's memory usage and perplexity when run with different numerical precisions (float16 and float32). It reloads the model for each precision, runs evaluation, and summarizes the trade-offs between memory efficiency and model accuracy."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "960bc2df",
@@ -403,6 +508,16 @@
     "        ppl = compute_perplexity(loss_val)\n",
     "        results[prec] = {\"peak_mib\": float(peak_mib), \"ppl\": float(ppl)}\n",
     "    return results\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b41c92a",
+   "metadata": {},
+   "source": [
+    "> **Batch Size Sweep: Analyzing Memory Scaling with Batch Size**\n",
+    "\n",
+    "This function evaluates how peak memory usage changes as the batch size increases. It creates batches of repeated input text, runs the model, and plots the relationship between batch size and memory consumption, providing insight into hardware requirements for larger batch processing."
    ]
   },
   {
@@ -497,6 +612,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "528a8281",
+   "metadata": {},
+   "source": [
+    "> **Experiment Runner: Orchestrating All Analyses**\n",
+    "\n",
+    "This function coordinates the entire experiment workflow. It loads the model and tokenizer, prepares the input, runs baseline measurements, and then executes the context length sweep, precision comparison, and batch size sweep. The results are returned in a structured dictionary for further analysis or reporting."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "232ad78b-2ef9-450e-9dde-314ae0fcecb7",
@@ -561,6 +686,16 @@
     "        \"precision_compare\": prec_results,\n",
     "        \"batch_sweep\": batch_results,\n",
     "    }\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88fce4bb",
+   "metadata": {},
+   "source": [
+    "> **Run All Experiments: Execute and Display Results**\n",
+    "\n",
+    "This cell calls the main experiment runner function, which executes all analyses and prints or visualizes the results. It serves as the entry point for running the notebook's full suite of model scaling experiments."
    ]
   },
   {
