--- a/lesson-1_introduction_to_model_optimization/exercise_2/starter/starter.ipynb
+++ b/lesson-1_introduction_to_model_optimization/exercise_2/starter/starter.ipynb
@@ -1,9 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "8538ff09",
+   "metadata": {},
+   "source": [
+    "> **Importing Core Libraries for Model Evaluation**\n",
+    "\n",
+    "This cell imports the essential libraries and modules needed for the experiments.\n",
+    "\n",
+    "**What to check:**\n",
+    "\n",
+    "- `math` for mathematical operations.\n",
+    "- `torch` for deep learning and tensor operations.\n",
+    "- `AutoTokenizer` and `AutoModelForCausalLM` from `transformers` for model and tokenizer loading."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8c4b7ff-8007-42d3-b546-161ea0311854",
+   "id": "ad2fc4fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,9 +29,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2c1fbe81",
+   "metadata": {},
+   "source": [
+    "> **Model Selection: Choosing the LLM for Experiments**\n",
+    "\n",
+    "This cell specifies the model name to be used throughout the notebook. The chosen model should be small enough to run on limited hardware but representative for scaling experiments.\n",
+    "\n",
+    "**What to check:**\n",
+    "\n",
+    "- Assign a string with the Hugging Face model name (e.g., `'TinyLlama/TinyLlama-1.1B-Chat-v1.0'`) to a variable like `MODEL_NAME`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "505c6a6b-781d-479c-9da4-0bc638cbb1d2",
+   "id": "548fa4c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,9 +54,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e8735de2",
+   "metadata": {},
+   "source": [
+    "> **Model and Tokenizer Loader: Device and Precision Handling**\n",
+    "\n",
+    "This function loads the model and tokenizer, moves the model to the correct device (GPU if available, otherwise CPU), and sets the appropriate numerical precision. The model is set to evaluation mode.\n",
+    "\n",
+    "**What to implement:**\n",
+    "\n",
+    "- Detect if CUDA (GPU) is available and set the device accordingly.\n",
+    "- Choose `torch.float16` if using CUDA, otherwise use `torch.float32`.\n",
+    "- Load the tokenizer and model from the specified model name.\n",
+    "- Move the model to the selected device and set it to evaluation mode.\n",
+    "- Return the tokenizer, model, and device."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7594d665-4e84-450e-b99e-4f314b3e2843",
+   "id": "d70cd37a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,9 +90,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "32d8521d",
+   "metadata": {},
+   "source": [
+    "> **Text Selection: Providing a Sample Passage**\n",
+    "\n",
+    "This function returns a sample passage of about 100 tokens, ideally from Wikipedia or a similar source. This passage will be used as the input prompt for all experiments.\n",
+    "\n",
+    "**What to implement:**\n",
+    "\n",
+    "- Choose or paste a paragraph of about 100 tokens.\n",
+    "- Return the text as a string."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a86d4106-cefb-4fbc-98ce-a706826987f2",
+   "id": "ae23f2bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,9 +121,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dbf85270",
+   "metadata": {},
+   "source": [
+    "> **Tokenization with Labels: Preparing Model Inputs**\n",
+    "\n",
+    "This function tokenizes the selected text and prepares the input tensors for the model, including setting up the labels for language modeling.\n",
+    "\n",
+    "**What to implement:**\n",
+    "\n",
+    "- Tokenize the text using the provided tokenizer with `return_tensors='pt'`.\n",
+    "- Set `labels = input_ids` in the returned dictionary.\n",
+    "- Return the inputs dictionary and the input length (number of tokens)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd910644-75ec-4fe7-a543-5ffc1b859572",
+   "id": "3b8c4291",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,9 +154,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b879ad55",
+   "metadata": {},
+   "source": [
+    "> **Peak Memory and Loss Calculation: Measuring Resource Usage**\n",
+    "\n",
+    "This function runs a forward pass of the model on the provided inputs and measures the peak GPU memory usage (if CUDA is available) and the loss value.\n",
+    "\n",
+    "**What to implement:**\n",
+    "\n",
+    "- If using CUDA, reset peak memory stats before running the model.\n",
+    "- Run the model in `torch.no_grad()` mode to avoid gradient computation.\n",
+    "- After the forward pass, if using CUDA, synchronize and get the peak memory allocated (in MiB).\n",
+    "- Return the peak memory (MiB) and the loss value."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a79bc77-fcab-4626-82a4-1f6478754e7e",
+   "id": "8b4b84c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,9 +190,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f29d0a31",
+   "metadata": {},
+   "source": [
+    "> **Perplexity Computation: Interpreting Model Loss**\n",
+    "\n",
+    "This function converts the model's loss value into perplexity, a standard metric for evaluating language models.\n",
+    "\n",
+    "**What to implement:**\n",
+    "\n",
+    "- Use `math.exp(loss)` to compute perplexity from the loss value.\n",
+    "- Return the perplexity."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "678ae06b-a587-4b21-8c88-75144b24dd23",
+   "id": "10c00c95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,9 +220,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "10d69381",
+   "metadata": {},
+   "source": [
+    "> **Forward Pass Timing: Measuring Inference Latency**\n",
+    "\n",
+    "This function measures the average time taken for the model to perform a forward pass (inference) on the input data. It includes warmup runs to stabilize performance and reports the mean latency over several timed runs.\n",
+    "\n",
+    "**What to implement:**\n",
+    "\n",
+    "- Move all input tensors to the correct device.\n",
+    "- Run a few warmup passes (not timed) to stabilize performance.\n",
+    "- For each timed run:\n",
+    "\n",
+    "  - Record the start time.\n",
+    "  - Run the model in `torch.no_grad()` mode.\n",
+    "  - If using CUDA, synchronize after each run.\n",
+    "  - Record the end time and compute the latency.\n",
+    "- Return the average latency in seconds."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a1bb526-1947-498e-98e5-7d806b5b3940",
+   "id": "30e25f4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,9 +271,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f56f3cf7",
+   "metadata": {},
+   "source": [
+    "> **Context Length Sweep: Scaling Analysis with Input Size**\n",
+    "\n",
+    "This function systematically increases the input (context) length and measures how peak memory usage and inference latency scale. It builds longer input texts, runs the model, and visualizes the results.\n",
+    "\n",
+    "**What to implement:**\n",
+    "\n",
+    "- Determine the model's maximum context length from `model.config` (default to 2048 if unavailable).\n",
+    "\n",
+    "- Filter the target context lengths to those that fit within the model's window.\n",
+    "- Build input texts of increasing length by repeating the base passage.\n",
+    "- For each target length:\n",
+    "\n",
+    "  - Tokenize and prepare inputs.\n",
+    "  - Move tensors to the correct device.\n",
+    "  - Measure peak memory and latency using the functions above.\n",
+    "  - Print a summary for each run.\n",
+    "- Plot memory and latency vs. input length using matplotlib.\n",
+    "- Return a dictionary with the results."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a379759-ab45-43e2-bbea-996ef3a721f7",
+   "id": "d2ab004f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,9 +353,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c9c6d49d",
+   "metadata": {},
+   "source": [
+    "> **Precision Comparison: Memory and Perplexity Across dtypes**\n",
+    "\n",
+    "This function compares the model's memory usage and perplexity when run with different numerical precisions (float16 and float32). It reloads the model for each precision, runs evaluation, and summarizes the trade-offs.\n",
+    "\n",
+    "**What to implement:**\n",
+    "\n",
+    "- Prepare a short evaluation paragraph (use the text selection function).\n",
+    "\n",
+    "- Tokenize the text once for all precisions.\n",
+    "- For each precision:\n",
+    "\n",
+    "  - Reload the model and tokenizer with the correct dtype.\n",
+    "  - Move inputs to the correct device.\n",
+    "  - Measure peak memory and loss, then compute perplexity.\n",
+    "  - Store results in a dictionary.\n",
+    "- Return the results dictionary."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77147a80-e26b-437d-b80a-ae3810b264b9",
+   "id": "11686a7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,9 +421,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3f698e5f",
+   "metadata": {},
+   "source": [
+    "> **Batch Size Sweep: Analyzing Memory Scaling with Batch Size**\n",
+    "\n",
+    "This function evaluates how peak memory usage changes as the batch size increases. It creates batches of repeated input text, runs the model, and plots the relationship between batch size and memory consumption.\n",
+    "\n",
+    "**What to implement:**\n",
+    "\n",
+    "- Prepare a base paragraph for batching.\n",
+    "- For each batch size:\n",
+    "\n",
+    "  - Create a batch of repeated texts and tokenize with padding and truncation.\n",
+    "  - Move tensors to the correct device.\n",
+    "  - Measure peak memory using the earlier function.\n",
+    "  - Print a summary for each batch size.\n",
+    "- Plot memory vs. batch size using matplotlib.\n",
+    "- Return a dictionary with the results."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f89d3869-d723-4080-b6e6-5fd32e387b1a",
+   "id": "0d77821d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,9 +491,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "730c8810",
+   "metadata": {},
+   "source": [
+    "> **Experiment Runner: Orchestrating All Analyses**\n",
+    "\n",
+    "This function coordinates the entire experiment workflow. It loads the model and tokenizer, prepares the input, runs baseline measurements, and then executes the context length sweep, precision comparison, and batch size sweep. The results are returned in a structured dictionary for further analysis or reporting.\n",
+    "\n",
+    "**What to implement:**\n",
+    "\n",
+    "- Load the model and tokenizer using your loader function.\n",
+    "- Select and tokenize a baseline paragraph.\n",
+    "- Run baseline measurements: peak memory, loss, perplexity, and forward latency.\n",
+    "- Run the context length sweep, precision comparison, and batch size sweep functions.\n",
+    "- Return a dictionary with all results."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "473365bf-4f75-467b-a7cf-d6fe1e67868d",
+   "id": "064e7f5f",
    "metadata": {},
    "outputs": [],
    "source": [
